force-app/main/default/objects/AE_Code_Alias__c/AE_Code_Alias__c.object-meta.xml
<CustomObject>
    <description>Self-healing alias table mapping raw AE codes from source files to Salesforce Users. Written by SalespersonMatcher when a Tier 2+ match succeeds, so the next occurrence resolves at Tier 1.</description>
    <label>AE Code Alias</label>
    <nameField>
        <label>Alias Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AE Code Aliases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>