force-app/main/default/objects/AE_Code_Alias__c/fields/Match_Tier__c.field-meta.xml
<CustomField>
    <fullName>Match_Tier__c</fullName>
    <label>Match Tier</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>