force-app/main/default/objects/AE_Code_Alias__c/fields/Normalized_Code__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Code__c</fullName>
    <label>Normalized Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>