force-app/main/default/objects/AE_Code_Alias__c/fields/Source_System_Code__c.field-meta.xml
<CustomField>
    <fullName>Source_System_Code__c</fullName>
    <label>Source System Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>