force-app/main/default/objects/AE_Code_Alias__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>AE Code Aliases</relationshipLabel>
    <relationshipName>AE_Code_Aliases</relationshipName>
    <type>Lookup</type>
</CustomField>